# pH_calc

./: .gitignore  Cargo.toml  LICENSE  README.md
pH_calc/: Cargo.toml  README.md  pyproject.toml
pH_calc-core/: Cargo.toml  pyproject.toml
pH_calc-core/src/: main.rs  types.rs
pH_calc-core/tests/: test.rs
pH_calc-py/: Cargo.toml  README.md
pH_calc-ui/: Cargo.toml
pH_calc-ui/src/: main.rs
pH_calc/src/: calculator.rs  lib.rs
pH_calc/tests/: test.rs
ph_calc-core/: README.md
ph_calc-core/src/: calculator.rs  types.rs
ph_calc-py/: Cargo.toml  README.md
ph_calc-py/src/: lib.rs  types.rs
ph_calc-ui/: Cargo.toml  README.md
ph_calc-ui/src/: main.rs
src/: calculator.rs  lib.rs  main.rs  types.rs
tests/: test.rs
