[package]
name = "pH_calc-core"
version = "0.1.0"
authors = ["nxhduong"]
edition = "2021"
description = "A simple pH calculator"
repository = "github.com/nxhduong/pH_calc"
license = "MIT"
keywords = ["pH", "chemistry", "science", "scientific"]
categories = ["chemistry", "scientific", "calculator"]

[dependencies]

[profile.release]
opt-level = 3
debug = "full"
lto = "fat"
panic = "unwind"
codegen-units = 1